--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p><img src="/assets/profile_picture.png" /></p>
 
-<p>I am a Staff software engineer and founding member of Netflix’s data abstraction platform, which supports common patterns including KeyValue, Tree, TimeSeries, Table Metadata, and more. I love learning, debugging, scaling systems, and solving hard problems. I currently spends most of her time providing scalable abstractions for thousands of developers at Netflix.</p>
+<p>I am a Staff software engineer and founding member of Netflix’s data abstraction platform, which supports common patterns including KeyValue, Tree, TimeSeries, Table Metadata, and more. I love learning, debugging, scaling systems, and solving hard problems. I currently spend most of my time providing scalable abstractions for thousands of developers at Netflix.</p>
 
 <p>You can find links to some of my <a href="https://github.com/vidhyaarvind">projects</a> and <a href="/talks/">talks</a></p>
 
